Fix validate button's invisibility

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -39,3 +39,7 @@ a {
   text-decoration: none;
   margin: 10px 0px 20px;
 }
+
+.btn-validate {
+  visibility: hidden;
+}
